# Computational-Geometry

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.zig  compile_commands.json
assets/billboards/: plane.blend  plane.mtl
assets/cube/: default_cube.blend  default_cube.mtl
assets/testing/: test.tm
assets/tilesets/: MRMOTEXT-x3.char  microbe-2-export.fnt
benchmarks/: convexhull_01.csv  convexhull_02.csv  plots.ipynb
docs/: Learn OpenGL.md
layouts/: editor.rgl  main_menu.rgl
shaders/: cubemap.vert  default.vert  default_light.frag  default_lit.frag  default_unlit.frag  outline.frag
shaders/fragment/: default_unlit.frag
shaders/vertex/: default_light.vert
src/: algorithm.h  algorithm.hpp  automata.h  damped.h  data.h  engine.hpp  geometry2d.h  gui.h  main.cpp  testing.cpp  testing.h  testing.hpp  textmode.hpp  types.h
tools/: to_font.py
